<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ll_activity">
    <include layout="@layout/layout_titlebar"/>

        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:background="@drawable/statistical_shape"
            android:layout_width="match_parent"
            android:paddingTop="@dimen/dp_20"
            android:paddingBottom="@dimen/dp_20"
            android:layout_height="@dimen/dp_120">
       <LinearLayout
           android:layout_width="0dp"
           android:layout_weight="1"
           android:gravity="center_horizontal"
           android:orientation="vertical"
           android:layout_height="match_parent">
           <TextView
           android:id="@+id/cumulative_reply_text"
           android:text="@string/cumulative_reply"
           android:textColor="#adbee8"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />
           <TextView
               android:id="@+id/cumulative_reply"
               android:text="56"
               android:layout_marginTop="20dp"
               android:textSize="30sp"
               android:textColor="@color/white"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
       </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:background="@color/text_gray1"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <TextView
                    android:text="@string/prompt_response_rate"
                    android:textColor="#adbee8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/prompt_response_rate"
                    android:text="89%"
                    android:layout_marginTop="20dp"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:background="@color/text_gray1"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_height="match_parent">
                <TextView
                    android:text="@string/satisfaction"
                    android:textColor="#adbee8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/satisfaction"
                    android:text="100%"
                    android:layout_marginTop="20dp"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    <android.support.design.widget.TabLayout
        android:id="@+id/tab"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabIndicatorColor="#f00"
        app:tabSelectedTextColor="@color/plugin_camera_black"
        app:tabMode="fixed"
        app:tabTextColor="@color/line" />
    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>
