<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:visibility="visible"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/interrogation_table"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:background="@drawable/bg_more"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="@dimen/dp_48"
                        android:layout_height="@dimen/dp_48"
                        android:contentDescription="TODO"
                        android:src="@drawable/im_physician" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/interrogation_table"
                    android:textColor="@color/black" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/mission"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:background="@drawable/bg_more"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="@dimen/dp_48"
                        android:layout_height="@dimen/dp_48"
                        android:contentDescription="TODO"
                        android:src="@drawable/im_mission" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/mission"
                    android:textColor="@color/black" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/mdt_fenzhen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:background="@drawable/bg_more"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="@dimen/dp_20"
                        android:layout_height="@dimen/dp_20"
                        android:contentDescription="TODO"
                        android:src="@mipmap/doctor_chat_icon8" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="MDT分诊"
                    android:textColor="@color/black" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/plus_sign"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:background="@drawable/bg_more"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="@dimen/dp_20"
                        android:layout_height="@dimen/dp_20"
                        android:contentDescription="TODO"
                        android:src="@mipmap/doctor_chat_icon6" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/plus_sign"
                    android:textColor="@color/black" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/video_recode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="invisible">

                <RelativeLayout
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:background="@drawable/bg_more"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="37dp"
                        android:layout_height="wrap_content"
                        android:contentDescription="TODO"
                        android:src="@drawable/videowenzhen" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="视频拍摄"
                    android:textColor="@color/black" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>